# django-rest-framework-template

./: .gitignore  Dockerfile  LICENSE  README.md  cookiecutter.json  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: .env.template
server/: asgi.py  urls.py  wsgi.py
server/settings/: __init__.py
server/settings/components/: common.py  database.py  healthcheck.py  rest_framework.py
server/settings/environments/: development.py  production.py
tests/test_server/: test_urls.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/config/: .env.template
{{cookiecutter.project_slug}}/server/settings/: __init__.py
{{cookiecutter.project_slug}}/server/settings/components/: __init__.py  common.py
{{cookiecutter.project_slug}}/server/settings/environments/: __init__.py  development.py  local.py.template  production.py
